# cjcj-runtime

./: .gitignore  AGENTS.md  BLOCKED-REPORT.md  CMakeLists.txt  README.md  REPORT-a4-gates.md  REPORT-alloc-gc-survey.md  REPORT-fix-rt_cstring_r2.md  REPORT-rt-allocutil.md  REPORT-rt-bitfield.md  REPORT-rt-regionlist.md  REPORT-rt0-platform.md  REPORT-w2-r4.md  REPORT-w5-abi-extension.md  STATE.md  cjpm.toml
contract/: cjcj_rt_barrier_protocol.h  cjcj_rt_instance.h
rt0/: AllocBufferNative.cpp  Atomic.cpp  BarrierProtocol.cpp  CMakeLists.txt  GCTibShift.cpp  README.md  RegionListVisitor.cpp  ScopedSaferegion.cpp  linux_bridge_sources.txt
rt0/arch/aarch64_ios/: C2NStub.S  Cjstart.S  ExclusiveScope.S  N2CStub.S
rt0/arch/aarch64_linux/: C2NStub.S  CalleeSavedStub.S  Cjpgo.S  Cjstart.S  ExclusiveScope.S  N2CStub.S
rt0/arch/aarch64_macos/: C2NStub.S  CalleeSavedStub.S  Cjstart.S  N2CStub.S
rt0/arch/arm_linux/: C2NStub.S  CalleeSavedStub.S  CjNativeRuntimeStartAndEnd.S  Cjstart.S  ExclusiveScope.S  HandleSafepointStub.S  N2CStub.S  RestoreContextForEH.S  StackGrowStub.S
rt0/arch/x86_64_ios/: Cjstart.S  ExclusiveScope.S  N2CStub.S
rt0/arch/x86_64_linux/: C2NStub.S  CalleeSavedStub.S  CjNativeRuntimeStartAndEnd.S  Cjpgo.S  Cjstart.S  ExclusiveScope.S  HandleSafepointStub.S  N2CStub.S  StackGrowStub.S
rt0/arch/x86_64_macos/: CalleeSavedStub.S  Cjstart.S  ExclusiveScope.S  N2CStub.S
rt0/arch/x86_64_windows/: CalleeSavedStub.S  Cjstart.S  ExclusiveScope.S  N2CStub.S
rt0/os/Linux/: Atomic.cpp  CJThreadSemaphore.cpp  CJThreadSpinLock.cpp  Futex.cpp  PagePoolMutex.cpp  Panic.cpp  SpinLock.cpp
rt0/os/Macos/: PagePoolMutex.cpp  Section.cpp
rt0/os/Windows/: MemMapCommit.cpp  PagePoolMutex.cpp  Panic.cpp  Section.cpp  UnwindWin.cpp  WinModuleManager.h
rt0/signal/: SignalStack.cpp  SignalStack.h  SignalVectorCompat.cpp
src.native/rt.instance/: CMakeLists.txt  instance_bridge.cpp
src/rt.abi/: log_exports.cj
src/rt.base/: AllocUtil.cj  AtomicSpinLock.cj  Log.cj  Panic.cj  RwLock.cj  SpinLock.cj  Types.cj
src/rt.common/: Dataref.cj  MemCommon.cj  PagePool.cj  Register.cj  StackType.cj  StateWord.cj  ThreadLocal.cj  TypeDef.cj
src/rt.cstring/: CString.cj
src/rt.demangle/: Api.cj  DeCompression.cj  DemangleUtils.cj  Demangler.cj  RawString.cj
src/rt.exception/: CalleeSavedRegisterContext.cj  EhFramePrimitives.cj  EhTable.cj  EhTablePrimitives.cj
src/rt.gc/: BarrierProtocol.cj  MarkWorkStack.cj  RegionBitmap.cj
src/rt.gc.forwarddata/: ForwardDataManager.cj
src/rt.heap.allocator/: AllocBuffer.cj  AllocUtil.cj  CartesianTree.cj  ForwardDataManager.cj  FreeRegionManager.cj  LocalDeque.cj  MemMap.cj  RegionInfo.cj  RegionList.cj  RouteInfo.cj  SlotList.cj
src/rt.objectmodel/: BaseObject.cj  Field.cj  GCTib.cj  RefField.cj
src/rt.runtime/: RuntimeParam.cj
src/rt.sched/: CJThreadStack.cj  CJthreadSpinLock.cj  List.cj  Processor.cj  Schmon.cj  Semaphore.cj  Thread.cj  Timer.cj  TraceTypes.cj
src/rt.stackmap/: stackmap.cj
src/rt.sync/: SysCall.cj
src/rt/abi/: demangle_exports.cj  env_exports.cj
src/rt/base/: Panic.cj
src/rt/common/: Dataref.cj  PagePool.cj  RunType.cj
src/rt/demangle/: DeCompression.cj  Literals.cj
src/rt/heap/: heap.cj
src/rt/sync/: SysCall.cj
test/: a4_gate.sh  compiler_identity.sh  compiler_identity_gate.sh  gate.sh  published_cjc.sh  rt0_manifest_gate.sh  runtime_build_gate.sh  w5_gate.sh
test/a4_gate/: noheap_tls_probe.cj  probe_driver.cj  scoped_breakpoints.gdb
test/compiler_gap/: w2_varray_struct_store.cj  w5_cfunc_export.cj
test/contract/: run_barrier_protocol_contract.sh
test/contract/instance/: instance_contract_probe.c  managed_host_contract.cj  managed_host_support.c  official_subscheduler_probe.c  run_contract.sh  run_managed_contract.sh  run_official_control.sh  run_staged_managed_host.sh  stop_source_check.py
test/hybrid_empty/: empty.cj
test/parity/base/: atomicspinlock_closure.py  atomicspinlock_noheap_manifest.txt  atomicspinlock_noheap_roots.cj  atomicspinlock_probe.cj  atomicspinlock_ref.cpp  base_probe.cj  cstring_probe.cj  fatal_probe.cj  run_atomicspinlock_probe.sh  run_cstring_probe.sh  run_rwlock_probe.sh  run_spinlock_probe.sh  run_types_probe.sh  rwlock_closure.py  rwlock_invalid_read.cj  rwlock_invalid_write.cj  rwlock_noheap_manifest.txt  rwlock_noheap_roots.cj  rwlock_oracle.cpp  rwlock_probe.cj  spinlock_closure.py  spinlock_lifetime_probe.cj  spinlock_noheap_manifest.txt  spinlock_noheap_roots.cj  spinlock_probe.cj  spinlock_ref.cpp  types_probe.cj  types_ref.cpp
test/parity/common/: dataref_probe.cj  dataref_ref.cpp  memcommon_closure.py  memcommon_probe.cj  memcommon_ref.cpp  pagepool_driver.cj  pagepool_layout_probe.cj  pagepool_noheap_driver.cj  pagepool_noheap_probe.cj  pagepool_ref.cpp  register_probe.cj  register_ref.cpp  run_dataref_probe.sh  run_memcommon_probe.sh  run_pagepool_probe.sh  run_register_probe.sh  run_runtype_probe.sh  run_stacktype_probe.sh  run_stateword_probe.sh  run_threadlocal_tlsabi_probe.sh  run_typedef_probe.sh  runtype_probe.cj  stacktype_probe.cj  stacktype_ref.cpp  stateword_driver.cj  stateword_foreign_probe.cj  stateword_probe.cj  stateword_ref.cpp  threadlocal_tlsabi_driver.cj  threadlocal_tlsabi_probe.cj  threadlocal_tlsabi_ref.cpp  typedef_driver.cj  typedef_ref.cpp
test/parity/demangle/: cangjie_driver.cj  driver_support.cpp  run_parity.sh
test/parity/exception/: callee_saved_closure.py  callee_saved_context_platform_parity.py  callee_saved_noheap_root.cj  callee_saved_probe.cj  callee_saved_ref.cpp  eh_primitives_closure.py  eh_primitives_noheap_root.cj  eh_primitives_probe.cj  eh_primitives_ref.cpp  run_callee_saved_probe.sh  run_eh_primitives_probe.sh
test/parity/gc/: forwarddata_closure.py  forwarddata_noheap.cj  forwarddata_probe.cj  forwarddata_ref.cpp  markworkstack_alloc.cpp  markworkstack_closure.py  markworkstack_noheap.cj  markworkstack_nonempty_clear.cj  markworkstack_nonempty_clear_ref.cpp  markworkstack_probe.cj  markworkstack_ref.cpp  regionbitmap_closure.py  regionbitmap_noheap.cj  (+5 more)
tools/: a4_gate.py  survey_alloc_gc.sh
(+165 files in other folders)
